cambio en el footer

--- a/config.toml
+++ b/config.toml
@@ -49,18 +49,18 @@ theme = "terrassa"
     dateFormat = "Monday, Jan, 2006"
 
 [params.contact] # Contact info
-    email = "example@gmail.com"
+    email = "dci.fi.unpsjb@gmail.com"
     phone = "xxx xxx xxx"
     skype = ""
-    address = "419 Creek St. Revere, MA 02151"
+    address = "Ciudad Universitaria KM 4, U9005 Comodoro Rivadavia, Chubut"
 
 [params.social] # Social networks
-    twitter = "https://twitter.com/john"
-    facebook = "https://facebook.com/john"
-    github = "https://github.com/john"
+    twitter = ""
+    facebook = ""
+    github = ""
     gitlab = ""
-    codepen = "https://codepen.io/john"
-    instagram = "https://instagram.com/john"
+    codepen = ""
+    instagram = ""
     pinterest = ""
     youtube = ""
     linkedin = ""
