--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ theme = "terrassa"
 
 [params.contact] # Contact info
     email = "dci.fi.unpsjb@gmail.com"
-    phone = "xxx xxx xxx"
+    phone = "297 455 8782" 
     skype = ""
     address = "Ciudad Universitaria KM 4, U9005 Comodoro Rivadavia, Chubut"
 
